<resources>
    <string name="app_name">GET-A-RIDE</string>
    <string name="nav_drawer_open">open Navigation drawer</string>
    <string name="nav_drawer_close">close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cus_name">Customer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="check">Approve</string>
    <string name="nic">NIC</string>
    <string name="status">Status</string>
    <string name="dt">Date and Time</string>
    <string name="id">User Id</string>
    <string name="price">Price</string>
    <string name="mileage">Mileage</string>


</resources>