<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_marginLeft="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nic"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nicCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/checkedDetails"
            android:layout_width="75dp"
            android:layout_height="33dp"
            android:text="@string/check"
            android:visibility="invisible" />
    </LinearLayout>


</LinearLayout>